--- a/calidadFrontend/src/app/mis-registros/mis-registros.component.html
+++ b/calidadFrontend/src/app/mis-registros/mis-registros.component.html
@@ -6,8 +6,7 @@
     <section class="buscador">
       <div class="group">
         <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
-        <input placeholder="Buscar" type="search" class="input">
-
+        <input placeholder="Buscar" type="search" class="input" [(ngModel)]="filtro">
       </div>
     </section>
     <section class="tabla-contenedor">
@@ -18,7 +17,6 @@
             <th>Fecha</th>
             <th>Departamento</th>
             <th>Maquina</th>
-            <th>Subensamble</th>
             <th>No parte</th>
             <th>Pza INSP</th>
             <th>Pza Rechazada</th>
@@ -27,125 +25,24 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Jacob</td>
-            <td class="hidden-column">Thornton</td>
-            <td>fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td><td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Larry the Bird</td>
-            <td class="hidden-column">twitter</td>
-            <td>fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td class="hidden-column">fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td class="hidden-column">mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td class="hidden-column">mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Larry the Bird</td>
-            <td>twitter</td>
-            <td class="hidden-column">fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Larry the Bird</td>
-            <td>twitter</td>
-            <td class="hidden-column">fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>Larry the Bird</td>
-            <td>twitter</td>
-            <td class="hidden-column">fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>Larry the Bird</td>
-            <td>twitter</td>
-            <td class="hidden-column">fat</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>mdo</td>
-          </tr>
+          <ng-container *ngIf="filtrarTabla().length > 0; else noResultados">
+            <tr *ngFor="let registro of registros of filtrarTabla()">
+              <td>{{registro.id}}</td>
+              <td>{{registro.fecha}}</td>
+              <td>{{registro.numerodp}}</td>
+              <td>{{registro.codigomq}}</td>
+              <td>{{registro.numerop}}</td>
+              <td>{{registro.pzainspc}}</td>
+              <td>{{registro.pzarecha}}</td>
+              <td>{{registro.pzaretra}}</td>
+              <td>{{registro.totalrecha}}</td>
+            </tr>
+          </ng-container>
+          <ng-template #noResultados>
+            <tr>
+              <td colspan="5" style="color: red; font-weight: bold;">Ningún resultado</td>
+            </tr>
+          </ng-template>
         </tbody>
       </table>
     </section>
