--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -6,7 +6,7 @@
     <section class="buscador">
       <div class="group">
         <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
-        <input placeholder="Buscar" type="search" class="input">
+        <input placeholder="Buscar" type="search" class="input"  [(ngModel)]="filtroBusqueda">
       </div>
     </section>
     <section class="tabla-contenedor">
@@ -26,21 +26,28 @@
           </tr>
         </thead>
         <tbody class="table-group-divider">
-          <tr *ngFor="let registro of RegistroFinal">
-            <td>{{registro.empleado}}</td>
-            <td>{{registro.semana}}</td>
-            <td>{{registro.numerodp}}</td>
-            <td>{{registro.codigomq}}</td>
-            <td>{{registro.numerop}}</td>
-            <td>{{registro.pzainspc}} pzas</td>
-            <td>{{registro.pzarecha}} pzas</td>
-            <td>{{registro.pzaretra}} pzas</td>
-            <td>{{registro.totalrecha}} pzas</td>
-            <td>
-              <svg (click)="verInfo(registro.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="ver" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 48 48"><g fill="none" stroke-linejoin="round" stroke-width="4"><rect width="28" height="34" x="13" y="10" fill="#2F88FF" stroke="#000"/>
-                <title>Toda la Información</title><path stroke="#000" stroke-linecap="round" d="M35 10V4H8C7.44772 4 7 4.44772 7 5V38H13"/><path stroke="#fff" stroke-linecap="round" d="M21 22H33"/><path stroke="#fff" stroke-linecap="round" d="M21 30H33"/></g></svg>
-            </td>
-          </tr>
+          <ng-container *ngIf="filtrarRegistros().length > 0; else noResultados">
+            <tr *ngFor="let registro of RegistroFinal of filtrarRegistros()">
+              <td>{{registro.empleado}}</td>
+              <td>{{registro.semana}}</td>
+              <td>{{registro.numerodp}}</td>
+              <td>{{registro.codigomq}}</td>
+              <td>{{registro.numerop}}</td>
+              <td>{{registro.pzainspc}} pzas</td>
+              <td>{{registro.pzarecha}} pzas</td>
+              <td>{{registro.pzaretra}} pzas</td>
+              <td>{{registro.totalrecha}} pzas</td>
+              <td>
+                <svg (click)="verInfo(registro.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="ver" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 48 48"><g fill="none" stroke-linejoin="round" stroke-width="4"><rect width="28" height="34" x="13" y="10" fill="#2F88FF" stroke="#000"/>
+                  <title>Toda la Información</title><path stroke="#000" stroke-linecap="round" d="M35 10V4H8C7.44772 4 7 4.44772 7 5V38H13"/><path stroke="#fff" stroke-linecap="round" d="M21 22H33"/><path stroke="#fff" stroke-linecap="round" d="M21 30H33"/></g></svg>
+              </td>
+            </tr>
+          </ng-container>
+          <ng-template #noResultados>
+            <tr>
+              <td colspan="5" style="color: red; font-weight: bold;">Ningún resultado</td>
+            </tr>
+          </ng-template>
         </tbody>
       </table>
     </section>
