--- a/calidadFrontend/src/app/regis-empleados/regis-empleados.component.html
+++ b/calidadFrontend/src/app/regis-empleados/regis-empleados.component.html
@@ -83,7 +83,7 @@
             <div class="input-group">
               <select [(ngModel)]="crearEmp.perfil" name="perfil" class="form-select" id="Perfil" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="Administrador">Administrador</option>
+                <!--<option value="Administrador">Administrador</option>-->
                 <option value="Empleado">Empleado</option>
               </select>
             </div>
@@ -141,7 +141,7 @@
             <div class="input-group">
               <select [(ngModel)]="crearEmp.perfil" name="perfil" class="form-select" id="Perfil" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="Administrador">Administrador</option>
+                <!--<option value="Administrador">Administrador</option>-->
                 <option value="Empleado">Empleado</option>
               </select>
             </div>
