--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
@@ -86,40 +86,10 @@
     margin-top: 5%;
     max-height: 650px;
   }
-  /*table, thead, tbody, th, td, tr {
-    display: block;
+  .modal-content .modal-header{
+    height: 50px;
   }
-
-  th {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
+  .modal-body{
+    padding: 5% 3%;
   }
-
-  tr {
-    border: 1px solid #dddddd;
-    margin-bottom: 10px;
-  }
-
-  td {
-    border: none;
-    border-bottom: 1px solid #dddddd;
-    position: relative;
-    padding-left: 50%;
-  }
-
-  td:before {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    color: #005ba2;
-    font-weight: bold;
-  }
-
-  td:nth-of-type(1):before { content: "Defecto"; }
-  td:nth-of-type(2):before { content: "Pzas"; }
-  td:nth-of-type(3):before { content: "Acciones"; }*/
 }
