--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -5,8 +5,23 @@
   <section class="contenedor">
     <section class="buscador">
       <div class="group">
-        <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
-        <input placeholder="Buscar" type="search" class="input"  [(ngModel)]="filtroBusqueda">
+        <section class="inicio d-flex align-items-center" style="font-weight: bold;">
+          <p class="mr-2">Inicio:</p>
+          <input type="date" class="input" id="Inicio" [(ngModel)]="fechaInicio">
+        </section>
+        <section class="final d-flex align-items-center" style="font-weight: bold;">
+          <p class="mr-2">Final:</p>
+          <input type="date" class="input" id="Fin" [(ngModel)]="fechaFin" >
+        </section>
+        <section class="filtrar">
+          <button (click)="Filtrar(fechaInicio,fechaFin)" class="btn btn-primary" type="button">Filtrar</button>
+        </section>
+        <section class="resetear">
+          <button class="btn btn-success" type="button" (click)="ngOnInit()">Todos</button>
+        </section>
+        <section class="exportar">
+          <button class="btn btn-warning" type="button" (click)="exportToExcel()">Exportar</button>
+        </section>
       </div>
     </section>
     <section class="tabla-contenedor">
@@ -14,7 +29,7 @@
         <thead>
           <tr>
             <th scope="col">Empleado</th>
-            <th scope="col">Semana</th>
+            <th scope="col">Fecha</th>
             <th scope="col">No Depto</th>
             <th scope="col">Cod Máquina</th>
             <th scope="col">No Parte</th>
@@ -26,10 +41,9 @@
           </tr>
         </thead>
         <tbody class="table-group-divider">
-          <ng-container *ngIf="filtrarRegistros().length > 0; else noResultados">
-            <tr *ngFor="let registro of RegistroFinal of filtrarRegistros()">
+            <tr *ngFor="let registro of RegistroFinal">
               <td>{{registro.empleado}}</td>
-              <td>{{registro.semana}}</td>
+              <td>{{registro.fecha}}</td>
               <td>{{registro.numerodp}}</td>
               <td>{{registro.codigomq}}</td>
               <td>{{registro.numerop}}</td>
@@ -42,12 +56,6 @@
                   <title>Toda la Información</title><path stroke="#000" stroke-linecap="round" d="M35 10V4H8C7.44772 4 7 4.44772 7 5V38H13"/><path stroke="#fff" stroke-linecap="round" d="M21 22H33"/><path stroke="#fff" stroke-linecap="round" d="M21 30H33"/></g></svg>
               </td>
             </tr>
-          </ng-container>
-          <ng-template #noResultados>
-            <tr>
-              <td colspan="10" style="color: red; font-weight: bold;">Ningún resultado</td>
-            </tr>
-          </ng-template>
         </tbody>
       </table>
     </section>
@@ -132,12 +140,13 @@
           <label for="InputDefectos" class="form-label" style="font-weight: bold;">Defectos:</label>
           <ul class="form-control">
             <li *ngFor="let defecto of defectos">
-              -{{defecto.defecto}}
+              -{{defecto.defecto}},{{defecto.tipo}}:{{defecto.cantidad}}
             </li>
           </ul>
         </div>
       </div>
       <div class="modal-footer">
+        <!--<button (click)="exportToExcel()">Exportar a Excel</button>-->
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
