--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
@@ -13,9 +13,6 @@
   grid-template-columns: repeat(2,1fr);
 }
 
-/*.btn{
-  width: 30%;
-}*/
 #ver{
   margin-top: 30px;
   display: flex;
@@ -29,8 +26,6 @@
 }
 .tabla-defectoRecha{
   background-color: rgba(255, 0, 0, 0.658);
-  /*padding: 0 2%;
-  margin-top: 5%;*/
 }
 .tabla-defectoRetra{
   background-color: rgba(4, 97, 9, 0.658);
@@ -40,9 +35,30 @@
   grid-template-columns: repeat(2, 1fr);
 }
 .boton{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  padding: 0 25%;
+  grid-gap: 5%;
+}
+.modal-content .modal-header{
+  height: 80px;
+}
+.modal-body{
+  margin-top:2%;
+  padding: 0 5%;
+}
+/*nuevos*/
+.tabla-defectoRecha{
+  margin: 2% 0;
+}
+.tabla-defectoRetra{
+  margin: 2% 0;
+}
+#Footer{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  padding: 0 50%;
+  grid-gap: 20px;
 }
 
 @media (max-width: 600px) {
@@ -90,6 +106,17 @@
     height: 50px;
   }
   .modal-body{
-    padding: 5% 3%;
+    padding: 1% 3%;
+  }
+  /*nuevo*/
+  .boton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #Footer{
+    display: grid;
+    grid-template-columns: repeat(2,max-width);
+    margin: 2% 25%;
   }
 }
