--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
@@ -14,10 +14,33 @@
   justify-content: center;
   align-items: center;
 }
-/*.inicio, .final{
-  display:grid;
-  grid-template-columns:25% 100%;
-}*/
+/*para los botones de filtrar y exportar*/
+#filtrar{
+  color: green;
+  font-weight: bold;
+  border-color: green;
+}
+#resetear{
+  color: #005ba2;
+  font-weight: bold;
+  border-color: #005ba2;
+}
+#exportar{
+  color: black;
+  font-weight: bold;
+  border-color: yellow;
+}
+#filtrar:hover{
+  background-color: green;
+  color: white;
+}
+#resetear:hover{
+  background-color: #005ba2;
+  color: white;
+}
+#exportar:hover{
+  background-color: yellow;
+}
 /*estilos para la tabla de registros*/
 .tabla-contenedor{
   margin: 2% 5%;
