--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -14,13 +14,13 @@
           <input type="date" class="input" id="Fin" [(ngModel)]="fechaFin" >
         </section>
         <section class="filtrar">
-          <button (click)="Filtrar(fechaInicio,fechaFin)" class="btn btn-primary" type="button">Filtrar</button>
+          <button (click)="Filtrar(fechaInicio,fechaFin)" class="btn" id="filtrar" type="button">Filtrar</button>
         </section>
         <section class="resetear">
-          <button class="btn btn-success" type="button" (click)="ngOnInit()">Todos</button>
+          <button class="btn" type="button" id="resetear" (click)="ngOnInit()">Todos</button>
         </section>
         <section class="exportar">
-          <button class="btn btn-warning" type="button" (click)="exportToExcel()">Exportar</button>
+          <button class="btn" type="button" id="exportar" (click)="exportToExcel()">Exportar</button>
         </section>
       </div>
     </section>
@@ -42,15 +42,15 @@
         </thead>
         <tbody class="table-group-divider">
             <tr *ngFor="let registro of RegistroFinal">
-              <td>{{registro.empleado}}</td>
+              <td>{{registro.empleados.nombre}}</td>
               <td>{{registro.fecha}}</td>
               <td>{{registro.numerodp}}</td>
               <td>{{registro.codigomq}}</td>
               <td>{{registro.numerop}}</td>
-              <td>{{registro.pzainspc}} pzas</td>
-              <td>{{registro.pzarecha}} pzas</td>
-              <td>{{registro.pzaretra}} pzas</td>
-              <td>{{registro.totalrecha}} pzas</td>
+              <td>{{ registro.pzainspc !== null ? formatNumber(registro.pzainspc) : '' }} pzas</td>
+              <td>{{ registro.pzarecha !== null ? formatNumber(registro.pzarecha) : '' }} pzas</td>
+              <td>{{ registro.pzaretra !== null ? formatNumber(registro.pzaretra) : '' }} pzas</td>
+              <td>{{ registro.totalrecha !== null ? formatNumber(registro.totalrecha) : '' }} pzas</td>
               <td>
                 <svg (click)="verInfo(registro.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="ver" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 48 48"><g fill="none" stroke-linejoin="round" stroke-width="4"><rect width="28" height="34" x="13" y="10" fill="#2F88FF" stroke="#000"/>
                   <title>Toda la Información</title><path stroke="#000" stroke-linecap="round" d="M35 10V4H8C7.44772 4 7 4.44772 7 5V38H13"/><path stroke="#fff" stroke-linecap="round" d="M21 22H33"/><path stroke="#fff" stroke-linecap="round" d="M21 30H33"/></g></svg>
@@ -121,19 +121,19 @@
         <div class="row g-4">
           <div class="col">
             <label for="InputEmpleado" class="form-label" style="font-weight: bold;">Pza Inspeccionadas</label>
-            <input type="text" class="form-control" id="InputEmpleado" value="{{pzainspec}}" disabled>
+            <input type="text" class="form-control" id="InputEmpleado" [value]="formatNumber(pzainspec)" disabled>
           </div>
           <div class="col">
             <label for="InputTurno" class="form-label" style="font-weight: bold;">Pza Rechazadas</label>
-            <input type="text" class="form-control" id="InputTurno" value="{{pzarecha}}" disabled>
+            <input type="text" class="form-control" id="InputTurno" [value]="formatNumber(pzarecha)" disabled>
           </div>
           <div class="col">
             <label for="InputFecha" class="form-label" style="font-weight: bold;">Pza Retrabajo</label>
-            <input type="text" class="form-control" id="InputFecha" value="{{pzaretra}}" disabled>
+            <input type="text" class="form-control" id="InputFecha" [value]="formatNumber(pzaretra)" disabled>
           </div>
           <div class="col">
             <label for="InputSemana" class="form-label" style="font-weight: bold;">Total pza Rechazadas</label>
-            <input type="text" class="form-control" id="InputSemana" value="{{pzatotalrecha}}" disabled>
+            <input type="text" class="form-control" id="InputSemana" [value]="formatNumber(pzatotalrecha)" disabled>
           </div>
         </div>
         <div class="row">
